# deep-research-agent-gemini

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  final_result.json  final_result.txt  manual_deploy.sh  pyproject.toml
agent/: configuration.py  graph.py  main.py  server.py  state.py  tools_and_schemas.py  utils.py
deployment-server/: server.py
deployment-server/scripts/: deploy.sh  run.sh
frontend/: index.html  script.js  shader.js  styles.css
